<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boulder Wall App</string>
    <string name="app_title">Boulder Wall App</string>

    <string name="label_hold">Hold %1$d / %2$d</string>
    <string name="label_streak">Streak</string>
    <string name="label_bonus">Bonus</string>

    <string name="button_grip">Grip</string>
    <string name="button_fall">Fall</string>
    <string name="button_reset">Reset</string>
    <string name="button_chalk">Chalk Up</string>
    <string name="button_language">Language</string>

    <string name="msg_chalk_used">Chalk used!</string>
    <string name="msg_route_complete">Route Complete!</string>
    <string name="msg_fallen">You fell! Press Reset to try again.</string>

    <string name="content_desc_wall_image">Illustration of a bouldering wall</string>
</resources>
